# Projet-MOPSI-jeu-dame

./: CMakeLists.txt  Exec.py  GameModel.py  README.md  grid.py  main.cpp  piece.py  tools.cpp  tools.h  view.py
Genetic_Algorithm/: CMakeLists.txt  genetic.cpp  genetic_tools.cpp  genetic_tools.h  tools.cpp  tools.h
